bk_ida/gccida/g1/higher_prime_number
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/higher_prime_number/src/hashtab.c:538:19: error: conflicting types for 'higher_prime_number'
unsigned __int64  higher_prime_number( unsigned __int64 n) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/higher_prime_number/src/hashtab.c:60:22: note: previous declaration is here
static unsigned long higher_prime_number PARAMS ((unsigned long));
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/higher_prime_number/src/hashtab.c:547:27: error: use of undeclared identifier 'primes_0'
v2 = ( unsigned __int64 *)primes_0; 
                          ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/higher_prime_number/src/obj/hashtab.o] Error 1
